--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "form-serialize": "^0.7.2",
     "http-proxy-middleware": "^2.0.6",
     "jest-editor-support": "^30.1.0",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-editor": "^1.4.0",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^18.1.0",
+    "react-number-format": "^5.1.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
